--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,1 +1,6 @@
-<resources><string name="app_name">Summary-Tube</string></resources>
+<resources>
+    <string name="app_name">Summary-Tube</string>
+    <string name="api_key_label">OpenAI API Key</string>
+    <string name="api_key_hint">Enter your key</string>
+    <string name="save_button">Save</string>
+</resources>
